<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">农历提醒</string>
    <string name="event">事件</string>
    <string name="action">操作</string>
    <string name="action_settings">设置</string>
    <string name="action_showAllEvents">显示全部事件</string>
    <string name="action_about">关于</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>
    <string name="action_del">删除</string>
    <string name="exit">退出</string>
    <string name="action_apply">应用</string>
    <string name="reminder_me">提醒我</string>
    <string name="reminder">提醒</string>
    <string name="solar_terms">节气</string>
    <string name="solar_terms_24">廿四节气</string>
    <string name="defaultReminder">默认提醒</string>
    <string name="repeat">重复</string>
    <string name="repeatType">重复方式</string>
    <string name="repeatNum">重复次数</string>
    <string name="all_day">全天</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="selectCalendarAccount">请选择日历账户</string>
    <string name="title_activity_settings">设置</string>
    <string name="create_event_short_label">创建事件</string>
    <string name="exit_event_description">尚未保存，是否继续编辑。</string>
    <string name="version">版本:</string>
    <string name="how_days_before">提前天数</string>
    <string name="time">时间</string>
    <string name="scoring">去评分</string>
    <string name="scoringBody">支持我，去应用商店评分并反馈意见。</string>
    <string name="confirmDeletion">确认删除！</string>
    <string-array name="indicator_string_array">
        <item>农历</item>
        <item>公历</item>
    </string-array>

    <string-array name="repeat_type">
        <item>年</item>
        <item>月</item>
    </string-array>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="title_activity_about">关于</string>

    <string-array name="npv_lunar_year_without_measure_hint">
        <item>二零一六</item>
    </string-array>
    <string-array name="npv_lunar_month_without_measure_hint">
        <item>十一</item>
    </string-array>
    <string-array name="npv_lunar_day_with_measure_hint">
        <item>初一</item>
    </string-array>

    <string name="create_reminder">添加提醒</string>
    <string name="reminder0">无提醒</string>
    <string name="reminder1">提前1天9:00</string>
    <string name="reminder2">提前1天9:00通过邮件</string>
    <string name="reminder3">提前1周9:00</string>
    <string name="reminder4">提前1周9:00通过邮件</string>
    <string name="reminder_customize">自定义</string>

    <string name="about_description">说明</string>
    <string name="about_description_body">农历提醒是一个在google日历中新建按农历重复事件的应用，该应用可以实现新建-修改-删除农历事件，且该应用不存储日历数据，实时读取google日历数据。</string>
    <string name="about_author">作者</string>
    <string name="about_author_name">kunfei</string>
    <string name="about_donate">捐赠</string>
    <string name="about_donate_zfb">支付宝:gekunfei@qq.com (点击复制)</string>
    <string name="about_donate_wexin">微信:kunfei_ge (点击复制)</string>
    <string name="about_donate_des">您的支持是我的动力，如果觉得软件好用请捐赠，五星好评支持我。</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_app_config">程序配置</string>

    <string name="pref_title_theme">主题</string>
    <string name="pref_description_theme">应用配色</string>
    <string name="pref_title_cache_data">缓存数据</string>
    <string name="pref_description_cache_data">缓存Calendar Events数据,加载更快</string>

    <string name="pref_header_reminder_calendar_config">提醒日历配置</string>

    <string name="pref_title_calendar_name">日历名称</string>
    <string name="pref_title_account_name">日历用户</string>
    <string name="pref_title_calendar_id">日历ID</string>
    <string name="pref_title_calendar_background">日历背景颜色</string>
    <string name="pref_title_calendar_foreground">日历文字颜色</string>

    <string name="select_color">选择颜色</string>

    <string name="pref_header_reminder_event_config">提醒事件配置</string>

    <string name="default_repeat_year">默认重复年数</string>
    <string name="default_reminder">默认提醒</string>

    <string name="color_picker_default_title" msgid="1248663997452044787">"选择颜色"</string>
    <string name="color_swatch_description" msgid="2883438431173736180">"颜色 <xliff:g id="COLOR_INDEX">%1$d</xliff:g>"</string>
    <string name="color_swatch_description_selected" msgid="5020921249944943124">"已选择颜色 <xliff:g id="COLOR_INDEX">%1$d</xliff:g>"</string>

    <string name="pref_header_solar_terms_config">节气日历配置</string>

    <string name="tomato">番茄红</string>
    <string name="tangerine">橘红</string>
    <string name="banana">香蕉黄</string>
    <string name="basil">罗勒绿</string>
    <string name="sage">鼠尾草绿</string>
    <string name="peacock">孔雀蓝</string>
    <string name="blueberry">蓝莓色</string>
    <string name="lavender">薰衣草色</string>
    <string name="grape">葡萄紫</string>
    <string name="flamingo">红鹤色</string>
    <string name="graphite">石墨黑</string>
    <string name="default_color">默认</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="no_google_services">检测不到Google服务,程序无法使用</string>
    <string name="select_repeat_num">选择重复次数</string>
    <string name="select_repeat_type">选择重复方式</string>
    <string name="customize_reminder">自定义提醒</string>
    <string name="no_events">点击 ➕ 创建你的第一个农历提醒吧</string>
    <string name="reminder_by_email">通过邮件提醒</string>

</resources>
