<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/navigation_drawer_menu_category_sections"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navReminder"
            android:title="@string/app_name" />
        <item
            android:id="@+id/navSolarTerms"
            android:title="@string/solar_terms_24" />
    </group>

    <group
        android:id="@+id/navigation_drawer_menu_category_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            android:title="@string/action_about"
            app:showAsAction="never" />
    </group>

</menu>
