<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_daysAgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/editText_day"
        android:padding="@dimen/padding_default"
        android:text="@string/how_days_before" />

    <EditText
        android:id="@+id/editText_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/editText_time"
        android:padding="@dimen/padding_default"
        android:text="@string/time" />

    <EditText
        android:id="@+id/editText_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <View
        android:id="@+id/view_reminderType"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:background="@color/colorLightGrey"
        android:padding="@dimen/padding_default" />

    <CheckBox
        android:id="@+id/checkBox_byEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_by_email" />


</LinearLayout>