<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gedoor.kunfei.lunarreminder.ui.EventEditActivity"
    tools:showIn="@layout/activity_event_read">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/vw_chinese_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivw_all_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/all_day"
                android:padding="@dimen/padding_default"
                app:srcCompat="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/tvw_chinese_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_default" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivw_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/repeat"
                android:padding="@dimen/padding_default"
                app:srcCompat="@drawable/ic_refresh_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:text="@string/repeatType"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_default" />

                    <TextView
                        android:id="@+id/tvw_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:text="@string/year"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_default" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/vw_repeat_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:text="@string/repeatNum"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_default" />

                    <TextView
                        android:id="@+id/tvw_repeat_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:text="@string/repeat"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_default" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivw_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reminder"
                android:padding="@dimen/padding_default"
                app:srcCompat="@drawable/ic_notifications_active_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvw_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_default"
                    android:text="@string/reminder"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_default" />

                <ListView
                    android:id="@+id/list_vw_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_default" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
