<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gedoor.kunfei.lunarreminder.UI.ReminderEditActivity"
    tools:showIn="@layout/activity_event_edit">


    <ImageView
        android:id="@+id/ivw_all_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_access_time_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/all_day"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/vw_chinese_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/ivw_all_day"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/ivw_all_day"
        android:layout_marginTop="0dp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivw_all_day" />

    <ImageView
        android:id="@+id/ivw_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_refresh_black_24dp"
        android:contentDescription="@string/repeat"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toLeftOf="@+id/ivw_all_day"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/vw_repeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/ivw_repeat"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/ivw_repeat"
        android:layout_marginTop="0dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivw_repeat" />

    <ImageView
        android:id="@+id/ivw_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_notifications_active_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="@+id/ivw_repeat"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/reminder"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvw_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/ivw_reminder"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/ivw_reminder"
        android:layout_marginTop="0dp" />

    <ListView
        android:id="@+id/list_vw_reminder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/ivw_reminder"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvw_reminder" />


</android.support.constraint.ConstraintLayout>
